# vk-archiver

./: .gitignore  CLI_REFACTORING_SUMMARY.md  README.md  pyproject.toml
.cursor/rules/: python-general-rules.mdc  python-rules._mdc_
specs/: group_downloads_plan.md  refactoring_plan.md  task_execution_guide.md
tests/: __init__.py  test_config.py  test_consistency.py  test_downloaders.py  test_exceptions.py  test_rate_limiter.py  test_utils.py
vk_archiver/: config.yaml  main.py
vk_archiver/downloaders/: __init__.py  chat.py  documents.py  group.py  user.py  videos.py  wall.py
vk_archiver/utils/: __init__.py  consistency.py  example_integration.py  exceptions.py  file_ops.py  logging_config.py  validation.py  vk_utils.py
vk_photos/: config.yaml  filter.py  functions.py  main.py
vk_photos/downloaders/: __init__.py  chat.py  documents.py  group.py  metadata.py  photos.py  stories.py  user.py  videos.py  wall.py
vk_photos/utils/: __init__.py  auth.py  config.py  consistency.py  example_integration.py  exceptions.py  file_ops.py  logging_config.py  rate_limiter.py  state.py  validation.py  vk_utils.py
